# delivery

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  data-model.md  main.py  project-memory.md  pyproject.toml  requirements.txt  test-plan.md
backend/: requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 08c4a8b098c9_initial_schema.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py  security.py
backend/app/routers/: auth.py  merchants.py  orders.py
backend/scratch/: verify_auth.py  verify_menu.py  verify_orders.py
doc/: architecture.md  data-model.md  project-memory.md  requirements.md  test-plan.md  todo.md
